# discord-game-sdk4j

./: .gitignore  CHANGELOG.md  LICENSE  README.md  jitpack-download-natives.sh  jitpack-openjdk-16.sh  jitpack.yml  pom.xml  prepare-release.sh
.github/: FUNDING.yml
.woodpecker/: docs.yml
dev/: capture.sh
examples/: ActivityExample.java  DownloadNativeLibrary.java  FriendNotificationExample.java  IdResolver.java  LobbyExample.java  NetworkExample.java  RelationshipExample.java  VoiceExample.java
src/main/c/: CMakeLists.txt  Callback.c  Callback.h  EventHandler.c  EventHandler.h  Makefile  Utils.h  de_jcm_discordgamesdk_ActivityManager.c  de_jcm_discordgamesdk_ActivityManager.h  de_jcm_discordgamesdk_Core.c  de_jcm_discordgamesdk_Core.h  de_jcm_discordgamesdk_CreateParams.c  de_jcm_discordgamesdk_CreateParams.h  de_jcm_discordgamesdk_ImageManager.c  de_jcm_discordgamesdk_ImageManager.h  de_jcm_discordgamesdk_LobbyManager.c  de_jcm_discordgamesdk_LobbyManager.h  de_jcm_discordgamesdk_NetworkManager.c  de_jcm_discordgamesdk_NetworkManager.h  de_jcm_discordgamesdk_OverlayManager.c  de_jcm_discordgamesdk_OverlayManager.h  de_jcm_discordgamesdk_RelationshipManager.c  de_jcm_discordgamesdk_RelationshipManager.h  de_jcm_discordgamesdk_UserManager.c  de_jcm_discordgamesdk_UserManager.h  de_jcm_discordgamesdk_VoiceManager.c  de_jcm_discordgamesdk_VoiceManager.h  de_jcm_discordgamesdk_activity_Activity.c  de_jcm_discordgamesdk_activity_Activity.h  de_jcm_discordgamesdk_activity_ActivityAssets.c  de_jcm_discordgamesdk_activity_ActivityAssets.h  de_jcm_discordgamesdk_activity_ActivityParty.c  de_jcm_discordgamesdk_activity_ActivityParty.h  de_jcm_discordgamesdk_activity_ActivityPartySize.c  de_jcm_discordgamesdk_activity_ActivityPartySize.h  de_jcm_discordgamesdk_activity_ActivitySecrets.c  de_jcm_discordgamesdk_activity_ActivitySecrets.h  de_jcm_discordgamesdk_activity_ActivityTimestamps.c  de_jcm_discordgamesdk_activity_ActivityTimestamps.h  de_jcm_discordgamesdk_lobby_LobbyMemberTransaction.c  (+5 more)
src/main/java/de/jcm/discordgamesdk/: ActivityManager.java  ApplicationManager.java  Core.java  CoreClosedException.java  CreateParams.java  DiscordUser.java  (+21 more)
toolchains/: linux-amd64.cmake.example  macos-amd64.cmake.example  windows-amd64.cmake.template  windows-x86.cmake.template
(+60 files in other folders)
